# synapse

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  eslint.config.js  index.html  node_modules  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  change_request.yml  config.yml
.github/workflows/: auto-release.yml  ci.yml  e2e.yml  release-desktop.yml  release-macos.yml
.ladle/: components.tsx
crates/synapse-core/: Cargo.toml
crates/synapse-core/examples/: rebaseline.rs
crates/synapse-core/src/: agent.rs  autolink.rs  bridge.rs  collab.rs  config_sync.rs  discovery.rs  docid.rs  external_terminal.rs  fs_io.rs  git.rs  github.rs  graph_query.rs  lib.rs  links.rs  location.rs  mcp_provision.rs  merge.rs  migrate.rs  paths.rs  registry.rs  remote_shell.rs  retrieval.rs  search.rs  secrets.rs  settings.rs  sftp.rs  ssh.rs  ssh_command.rs  ssh_config.rs  terminal.rs  tree.rs  vfs.rs  walk.rs  watch.rs
crates/synapse-mcp/: Cargo.toml
crates/synapse-mcp/src/: main.rs
crates/synapse-mcp/tests/: bridge_e2e.rs
docs/: ARCHITECTURE.md  PACKAGING.md  PLAN-graph-view-v2.md  PLAN-i18n.md  PLAN-v0.2.md  PLAN-v0.4.md  REQUIREMENTS.md  UI-VERIFICATION.md  auto-links-design.md  editor-preserve-formatting-design.md  pdf-draw-design.md
docs/plans/: 2026-06-25-graph-view-and-mcp-graph-search.md
docs/specs/: 2026-06-25-graph-view-and-mcp-graph-search-design.md
e2e/: drawio-editor.spec.ts  drawio-viewer.spec.ts  excalidraw-editor.spec.ts  graph-view.spec.ts  graph.spec.ts  helpers.ts
scripts/: copy-excalidraw-assets.mjs  copy-pdfjs-assets.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  auth.rs  bridge.rs  commands.rs  config_sync.rs  dock.rs  lib.rs  mcp.rs  remote.rs  sync.rs  terminal.rs  watcher.rs
src/app/: App.tsx  main.tsx  styles.css
src/features/agent/: AgentPanel.tsx  Markdown.tsx  markdown.test.ts  markdown.ts  permission.test.ts  permission.ts
src/features/commands/: CommandPalette.test.tsx  CommandPalette.tsx  registry.test.ts  registry.ts  staticCommands.test.ts  staticCommands.ts  useShortcutDispatcher.test.ts  useShortcutDispatcher.ts
src/features/drawio/: DrawioEditor.tsx  drawioEmbed.test.ts  drawioEmbed.ts
src/features/drawio-viewer/: DrawioEditor.tsx  DrawioPane.tsx  DrawioViewer.stories.tsx  DrawioViewer.tsx  buildDrawioHtml.test.ts  buildDrawioHtml.ts  drawioEmbed.test.ts  drawioEmbed.ts  fixtures.ts
src/features/editor/: FindBar.tsx  FrontmatterPanel.test.tsx  FrontmatterPanel.tsx  MarkdownEditor.tsx  applyBlockDiff.test.ts  applyBlockDiff.ts  backlinks.test.ts  backlinks.ts  deferUntilCompositionEnd.test.ts  deferUntilCompositionEnd.ts  extensions.ts  frontmatter.test.ts  frontmatter.ts  frontmatterModel.test.ts  frontmatterModel.ts  highlight.test.ts  images.test.ts  images.ts  internalLink.test.ts  internalLink.ts  lineNumberGutter.test.ts  lineNumberGutter.ts  lineNumbers.test.ts  lineNumbers.ts  linkifyUrls.test.ts  linkifyUrls.ts  mermaid.ts  mermaidBlock.test.ts  mermaidBlock.ts  preserveFormatting.test.ts  preserveFormatting.ts  roundtrip.test.ts  roundtripSafety.test.ts  roundtripSafety.ts  search.test.ts  search.ts
src/features/excalidraw/: ExcalidrawEditor.stories.tsx  ExcalidrawEditor.tsx  fixtures.ts  scene.test.ts  scene.ts
src/features/graph/: GraphPanel.stories.tsx  GraphPanel.tsx  GraphView.stories.tsx  GraphView.tsx  camera.test.ts  camera.ts  filter.test.ts  filter.ts  hitTest.test.ts  hitTest.ts  layout.stress.test.ts  layout.test.ts  layout.ts  layoutCache.test.ts  layoutCache.ts  renderer.test.ts  renderer.ts  zoom.test.ts  zoom.ts
src/features/history/: FileHistoryModal.tsx  format.test.ts  format.ts  historyStore.ts
src/features/html/: htmlToMarkdown.test.ts  htmlToMarkdown.ts  markdownToHtml.test.ts  markdownToHtml.ts
src/features/html-viewer/: HtmlViewer.stories.tsx  HtmlViewer.tsx  buildViewerHtml.test.ts  buildViewerHtml.ts  sanitize.test.ts  sanitize.ts
src/features/image-viewer/: ImageViewer.test.tsx  ImageViewer.tsx
src/features/pdf-draw/: PdfDrawMenu.tsx  PdfDrawToolbar.tsx  bakePdf.test.ts  bakePdf.ts  drawDoc.test.ts  drawDoc.ts  renderStrokes.ts  usePdfDraw.ts
src/features/pdf-viewer/: PdfViewer.tsx
src/features/settings/: SettingsModal.test.tsx  SettingsModal.tsx
src/features/shortcuts/: ShortcutCheatsheet.tsx  cheatsheet.test.ts  cheatsheet.ts
src/features/sync/: CloneForm.tsx  LoginModal.tsx  SyncBar.tsx  commitMessage.test.ts  commitMessage.ts  guard.test.ts  guard.ts
src/features/terminal/: TerminalDock.tsx  TerminalPanel.tsx  imeStabilizer.test.ts  imeStabilizer.ts  ptyDecode.test.ts  ptyDecode.ts  terminalSessions.ts
src/features/theme/: theme.test.ts  theme.ts
src/features/update/: StartUpdateBar.tsx  UpdateBadge.tsx  UpdateToast.tsx  useUpdateAutoCheck.ts
src/features/viewer-zoom/: ZoomControls.tsx  useViewerGesture.ts  zoomMath.test.ts  zoomMath.ts
src/features/workspace/: ActivityBar.tsx  BacklinksPanel.test.tsx  BacklinksPanel.tsx  ContentPane.test.tsx  ContentPane.tsx  CreateMenu.test.tsx  CreateMenu.tsx  FilePreview.tsx  FileTree.test.tsx  FileTree.tsx  OpenPathForm.tsx  (+30 more)
src/i18n/: index.test.ts  index.ts
src/ipc/: agentApiKey.test.ts  ipc.test.ts  ipc.ts  mock.test.ts  mock.ts  types.ts
src/ladle/: ThemeFrame.tsx
src/shared/: DiffView.tsx  Icons.tsx  binary.ts  diff.test.ts  diff.ts  pathUtils.test.ts  pathUtils.ts  platform.test.ts  platform.ts  shortcuts.test.ts  shortcuts.ts
src/stores/: agent.test.ts  agent.ts  agentContext.test.ts  agentContext.ts  askNotes.test.ts  askNotes.ts  graphView.test.ts  graphView.ts  settings.test.ts  settings.ts  sync.test.ts  sync.ts  terminal.test.ts  terminal.ts  update.test.ts  update.ts  workspace.bridge.test.ts  workspace.dnd.test.ts  workspace.test.ts  workspace.ts
(+2 files in other folders)
