[package]
name = "synapse"
version = "0.4.41"
edition = "2021"
description = "Synapse — Notion-style note app that saves plain Markdown, synced via GitHub"
authors = ["Jaebin Lee"]
license = "Apache-2.0"
repository = "https://github.com/izagood/synapse"

[lib]
name = "synapse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synapse-core = { path = "../crates/synapse-core" }
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
