[package]
name = "synapse-core"
version = "0.1.0"
edition = "2021"
description = "Synapse core logic: file tree, workspace registry, path guards (GUI-free, fully testable)"
authors = ["Jaebin Lee"]
license = "Apache-2.0"
repository = "https://github.com/izagood/synapse"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
yrs = "0.27"
dissimilar = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "io-util", "net", "macros", "time"] }
russh = { version = "0.61.2", default-features = false, features = ["ring", "rsa"] }
russh-sftp = "2.3.0"

[dev-dependencies]
tempfile = "3"
